--- a/JeopardyProject/src/app/home-page/home-page.component.html
+++ b/JeopardyProject/src/app/home-page/home-page.component.html
@@ -7,7 +7,7 @@
   </div>
 
 
-  <table class="table" *ngIf="question">
+  <table class="table" *ngIf = "question">
     <thead>
       <tr>
         <th scope="col">Question</th>
@@ -17,9 +17,9 @@
     </thead>
     <tbody>
       <tr>
-        <td>{{question?.question}}</td>
-        <td>{{question?.value}}</td>
-        <td>{{question?.answer}}</td>
+        <td>{{question.question}}</td>
+        <td></td>
+        <td></td>
       </tr>
     </tbody>
   </table>
