--- a/JeopardyProject/src/app/home-page/home-page.component.html
+++ b/JeopardyProject/src/app/home-page/home-page.component.html
@@ -4,12 +4,14 @@
   <div class="row">
   
     <button class="btn btn-primary col-sm-4" (click)="getQuestionForDisplay()">Get a question</button>
+    <button class="btn" (click)="testAnswer(answer:string)">Check your answer</button>
   </div>
 
 
   <table class="table" *ngIf = "question">
     <thead>
       <tr>
+        <th scope="col">Category</th>
         <th scope="col">Question</th>
         <th scope="col">Value</th>
         <th scope="col">Answer</th>
@@ -17,13 +19,15 @@
     </thead>
     <tbody>
       <tr>
+        <td>{{question.category.title}}</td>
         <td>{{question.question}}</td>
-        <td></td>
-        <td></td>
+        <td>{{question.value}}</td>
+        <td>{{question.answer}}</td>
       </tr>
     </tbody>
   </table>
-
-
+  <label class="col-sm-4" for="answerInput">Enter your answer:</label>
+    <input class="col-sm-4" id="answerInput" name="answerInput" type="string" >
+  <label for = "answerInput">Enter your answer</label>
 </div>
 
