--- a/JeopardyProject/src/app/home-page/home-page.component.html
+++ b/JeopardyProject/src/app/home-page/home-page.component.html
@@ -8,7 +8,7 @@
   </div>
 
 
-  <table class="table" *ngIf = "question">
+  <table class="table" *ngIf = "question" >
     <thead>
       <tr>
         <th scope="col">Category</th>
@@ -22,12 +22,18 @@
         <td>{{question.category.title}}</td>
         <td>{{question.question}}</td>
         <td>{{question.value}}</td>
-        <td>{{question.answer}}</td>
+        <td [hidden]>{{question.answer}}</td>
+      
+        <td></td>
       </tr>
     </tbody>
   </table>
   <label class="col-sm-4" for="answerInput">Enter your answer:</label>
     <input class="col-sm-4" id="answerInput" name="answerInput" type="text" [(ngModel)]="answer">
+    <div *ngIf = "result">
+      Your answer was: 
+      {{result}}
+    </div>
   
 </div>
 
